# zendiggi

./: .gitignore  Pipfile  README.md  alembic.ini  google_reddit_scrape.py  ner_parsing.py  prestart.sh  pyproject.toml  reddit_scrape.py  zendiggi.db  zendiggi.py
alembic/: env.py
alembic/versions/: 15ff55751894_add_location_table.py  9d20ab908d8f_add_location_and_reddit_tables.py  c8d06153172a_add_reddit_related_tables.py
app/: main.py
app/clients/: google.py  reddit.py
app/crud/: __init__.py  crud_location.py  crud_reddit_comment.py  crud_reddit_post.py
app/db/: base.py  init_db.py  session.py
app/models/: location.py  reddit_comment.py  reddit_post.py
app/schemas/: __init__.py  location.py  reddit_comment.py  reddit_post.py
app/templates/: index.html
backend/app/: ner_parsing.py  reddit_scrape.py
frontend/: package.json
