[tool.poetry]
name = "zendiggi"
version = "0.1.0"
description = ""
authors = ["mwen00 <melanie.a.wen@gmail.com>"]
readme = "README.md"

[tool.poetry.dependencies]
python = "^3.10"
fastapi = "^0.88.0"
uvicorn = {extras = ["standard"], version = "^0.20.0"}
pydantic = "^1.10.2"
jinja2 = "^3.1.2"
python-dotenv = "^0.21.0"
python-multipart = "^0.0.5"
bs4 = "^0.0.1"
sqlalchemy = "^1.4.44"
alembic = "^1.8.1"
tenacity = "^8.1.0"
praw = "^7.6.1"


[tool.poetry.group.dev.dependencies]
autopep8 = "^2.0.0"

[build-system]
requires = ["poetry-core"]
build-backend = "poetry.core.masonry.api"
